public/styles/cv-en.css
.a4 {
    display: flex;
}

.section-header {
    font-family: var(--header-font);
    font-weight: bold;
    letter-spacing: 1px;
}

/***
SIDE BAR
*/

#h1 {
    font-size: var(--h1-font-size);
}

.sidebar,
.main-content {
    padding: 1em;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.sidebar {
    width: 32%;
    background-color: hsl(20, 80%, 84%);
    padding-top: calc(0 * var(--content-font-size));
    box-sizing: border-box;
}

.sidebar .section-header {
    background-color: hsl(20, 80%, 80%);
    padding: calc(0.5 * var(--content-font-size));
    text-align: center;
    margin-bottom: calc(0.5 * var(--content-font-size));
    font-size: var(--h3-font-size);
}

.profile {
    display: flex;
    justify-content: center;
    align-items: center;
    aspect-ratio: 1;
}

.mission-dates {
    line-height: var(--spaced-line-height);
    display: none;
    gap: 0.5em;
    text-align: left;
}

.mission-dates>.icon {
    width: 3em;
    aspect-ratio: 1;
    vertical-align: middle;
    margin-top: -0.6em;
}

.circle {
    width: 75%;
    aspect-ratio: 1;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    background: rgb(67, 86, 255);
    background: linear-gradient(135deg, rgb(45, 178, 255) 0%, rgba(67, 86, 255, 1) 80%);
    color: white;
    font-weight: bold;
    font-family: var(--h1-font);
    font-size: calc(1.8 * var(--content-font-size));
    line-height: 1.5em;
}

.about {
    line-height: var(--spaced-line-height);
}

.sidebar {
    display: flex;
    flex-direction: column;
}

.sidebar-sections {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
}

.sidebar-sections>.section:last-child {
    margin-bottom: 0;
}

.contact li {
    display: flex;
}

.contact-icon {
    margin-right: calc(0.5 * var(--content-font-size));
    height: 1.25em;
}

.contact li a {
    display: flex;
    gap: 0.5em;
    text-decoration: none;
    color: black;
}

.contact li a:hover {
    text-decoration: underline;
}

.contact li a .link-opener {
    height: 0.8em;
    align-self: center;
}

.bullets>li::before {
    content: '•';
    margin-right: calc(0.35 * var(--content-font-size));
}

.sub-bullets>li::before {
    content: '◦';
    margin-right: calc(0.35 * var(--content-font-size));
}

.bullets>li::before,
.sub-bullets>li::before {
    display: inline-block;
    font-size: 1em;
    position: relative;
}

.bullets>li,
.sub-bullets>li {
    display: flex;
}

.bullets.non-linear>li,
.sub-bullets.non-linear>li {
    display: block;
}

.sidebar li {
    line-height: var(--spaced-line-height);
}

.sidebar li+li {
    margin-top: 0.4em;
}

.certification-date {
    float: right;
}

.other li {
    text-align: justify;
}

.certifications .wrapper {
    display: inline-block;
    position: relative;
    width: 100%;
}


/***
MAIN CONTENT
*/

.main-content {
    flex: 1;
    gap: calc(1.5 * var(--content-font-size));
    background-color: #fcfcfc;
}

.main-content .section-header {
    font-size: var(--h2-font-size);
    margin-bottom: calc(0.4 * var(--content-font-size));
}

.main-content .sub-section-header {
    font-size: var(--h3-font-size);
    font-weight: normal;
    font-style: italic;
    margin-bottom: calc(0.4 * var(--content-font-size));
}

.sub-section {
    margin-bottom: calc(1.5 * var(--content-font-size));
}

.sub-section:last-child {
    margin-bottom: 0;
}

.company-experience {
    margin-bottom: calc(1 * var(--content-font-size));
}

.company-experience:last-child {
    margin-bottom: 0;
}

.company-title {
    font-size: var(--h4-font-size);
    font-weight: bold;
    margin-bottom: calc(0.5 * var(--content-font-size));
}

.company-work-date {
    float: right;
    font-style: normal;
}

.experience,
.skill {
    text-align: justify;
}

.experience+.experience {
    margin-top: 1em;
}

.experience {
    display: inline-block;
    position: relative;
    padding-left: calc(0.5 * var(--content-font-size));
    width: 100%;
    line-height: 1.2;
}

.experience::before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 1px;
    background-color: black;
}

.experience li {
    text-align: justify;
}

.additional-info {
    margin-left: calc(1 * var(--content-font-size));
    float: right;
}

.exp-keywords {
    font-weight: bold;
}

.exp-keywords::before {
    content: '[';
}

.exp-keywords::after {
    content: ']';
}

.exp-date {
    margin-left: calc(0.5 * var(--content-font-size));
}

.skills .bullets {
    margin-left: calc(0.1 * var(--content-font-size));
}

.skill+.skill {
    margin-top: 0.6em;
}

.keywords-grid {
    display: grid;
    margin-left: 1em;
    margin-top: 0.3em;
    gap: 0.3em;
}

.prog-languages {
    grid-template-columns: repeat(4, auto);
}

.dev-tools {
    grid-template-columns: repeat(3, auto);
}

.design-principles {
    grid-template-columns: repeat(3, auto);
}

.grid-list {
    --column-count: 4;
    display: grid;
    grid-template-columns: repeat(var(--column-count), auto);
    gap: 0.6em;
}

.grid-list .skill+.skill {
    margin-top: 0;
}

.grid-list .language {
    grid-column: span var(--column-count);
}

.language .flag {
    padding-left: 0.5em;
}

@media (max-width: 795px) {
    :root {
        --h1-font-size: clamp(calc(8px * var(--pt)),
                calc(20 * var(--pt) / 795 * 100vw),
                calc(20px * var(--pt)));
        --h2-font-size: clamp(calc(6.4px * var(--pt)),
                calc(16 * var(--pt) / 795 * 100vw),
                calc(16px * var(--pt)));
        --h3-font-size: clamp(calc(5.6px * var(--pt)),
                calc(14 * var(--pt) / 795 * 100vw),
                calc(14px * var(--pt)));
        --h4-font-size: clamp(calc(4.8px * var(--pt)),
                calc(12 * var(--pt) / 795 * 100vw),
                calc(12px * var(--pt)));
        --content-font-size:
            clamp(calc(4px * var(--pt)),
                calc(10 * var(--pt) / 795 * 100vw),
                calc(10px * var(--pt)));
    }

    body {
        min-height: unset;
    }

    .a4 {
        max-height: unset;
        aspect-ratio: unset;
    }

    .sidebar {
        width: 30%;
    }
}

